@@ -1,3 +1,10 @@
+2005-04-28  Christian Neumair  <chris@gnome-de.org>
+
+	* it.po: Added Italian translation by Daniele Medri
+	<daniele@medri.org>.
+
+	* de.po: Updated German translation.
+
 2005-04-21  Gareth Owen <gowen@gnome.org>
 
 	* en_GB.po: Added British English translation
